Use StandardCharsets and avoid exception